duniverse/lwt/test/ppx_expect/cases/match_5.ml
let _ =
  match%lwt Lwt.return () with
  | exception (Invalid_argument _) -> Lwt.return 0
